more precise title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Matthew Kay">
 
-<title>JoVI article template</title>
+<title>JoVI article template for the experimental track</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -115,7 +115,7 @@ div.csl-indent {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">JoVI article template</h1>
+<h1 class="title">JoVI article template for the experimental track</h1>
 </div>
 
 
